--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,10 @@
-[tool.poetry]
+[project]
 name = "awaitwhat"
-version = "21.1"
+version = "24.11"
 description = "async/await introspection"
-authors = ["Dima Tisnek <dimaqq@gmail.com>"]
-license = "MIT"
+authors = [{name="Dima Tisnek", email="dimaqq@gmail.com"}]
+license = { file = "LICENSE" }
 readme = "readme.md"
-homepage = "https://github.com/dimaqq/awaitwhat"
-repository = "https://github.com/dimaqq/awaitwhat"
-documentation = "https://github.com/dimaqq/awaitwhat"
 keywords = ["asyncio"]
 classifiers = [
   "Development Status :: 3 - Alpha",
@@ -23,19 +20,17 @@ classifiers = [
   "Operating System :: Microsoft :: Windows",
 ]
 
-build = "build.py"
-
-packages = [{include = "awaitwhat"}]
-
-[tool.poetry.dependencies]
-python = ">=3.7,<3.10"
-
-[tool.poetry.dev-dependencies]
-pytest = "*"
-ipython = "*"
-black = { version = "^21.6b0", allow-prereleases = true }
-pre-commit = "^2"
+[project.urls]
+homepage = "https://github.com/dimaqq/awaitwhat"
+repository = "https://github.com/dimaqq/awaitwhat"
+documentation = "https://github.com/dimaqq/awaitwhat"
 
 [build-system]
-requires = ["poetry>=1.0.9"]
-build-backend = "poetry.masonry.api"
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["awaitwhat"]
+ext-modules = [
+    { name = "awaitwhat._what", sources = ["awaitwhat/what.c"] }
+]
